--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+@import url(../src/Components/Header/fontello/css/fontello.css);
+
+body { 
+  --main-accent-color: rgb(33, 175, 240);
+  --light-font-color: #777;
+  --dark-font-color: #444;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 65%;
+  -webkit-font-smoothing: antialiased;
 }
