--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
 text-align: center;
 }
 .App header {
@@ -19,4 +19,4 @@ text-align: center;
     color: white;
     text-decoration: none;
     list-style: none;
-}
+} */
